[gd_scene load_steps=12 format=3 uid="uid://jbkrvnxhcveo"]

[ext_resource type="Texture2D" uid="uid://x6bq8t8ncxf6" path="res://assets/chicken.svg" id="1_ln4va"]
[ext_resource type="Script" path="res://scenes/chicken.gd" id="1_q7wet"]
[ext_resource type="Texture2D" uid="uid://cgldsdxjmuh60" path="res://assets/chicken_rocket.svg" id="3_hksca"]
[ext_resource type="Texture2D" uid="uid://boxho3kxrprf4" path="res://assets/chicken_flash.svg" id="4_13ddr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gqun6"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2px1"]
size = Vector2(64, 36)

[sub_resource type="Gradient" id="Gradient_nin37"]
offsets = PackedFloat32Array(0, 0.7, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_05u7l"]
gradient = SubResource("Gradient_nin37")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ieicn"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
color_ramp = SubResource("GradientTexture1D_05u7l")

[sub_resource type="Gradient" id="Gradient_p4r1k"]
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a1u3n"]
gradient = SubResource("Gradient_p4r1k")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true

[node name="Chicken" type="StaticBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_q7wet")

[node name="Normal" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ln4va")

[node name="Rocket" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(8, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_hksca")

[node name="Flash" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(8, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_13ddr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gqun6")

[node name="Hitbox" type="Area2D" parent="."]
metadata/hurtful = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_p2px1")

[node name="RocketParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(-32, 0)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_ieicn")
texture = SubResource("GradientTexture2D_a1u3n")
lifetime = 0.2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-100, -100, 200, 200)

[node name="LifeTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
